--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,5 +1,6 @@
 .main {
-  margin: 0 5%;
+  width: 95vw;
+  margin: 0 auto;
   padding-top: 1.25rem;
 }
 
@@ -43,4 +44,8 @@
 .icon {
   padding: 0 0.25rem;
   text-align: center
+}
+
+.table {
+  margin: 0 auto;
 }
