--- a/components/Form/Form.module.css
+++ b/components/Form/Form.module.css
@@ -1,3 +1,10 @@
+.form {
+  display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    width: 66.67%;
+    gap: 1rem;
+}
+
 .container_input {
   width: 100%;
   margin: 1rem 0;
@@ -5,6 +12,23 @@
   outline: none;
   border: 1px solid;
   border-radius: 0.375rem;
+}
+
+.container_input_date {
+  border: 1px solid;
+  padding: 0.75rem 1.25rem;
+}
+
+.container_input_date:focus {
+  outline: none;
+  border-radius: 0.375rem;
+}
+
+
+.form_option {
+  display: flex;
+    gap: 2.5rem;
+    align-items: center;
 }
 
 .form_check_input {
@@ -38,4 +62,10 @@
     color: #FFFFFF;
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
+}
+
+.form_but:hover {
+background-color: #F9FAFB;
+  border-color: #10B981;
+  color: #10B981;
 }
