--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -47,10 +47,13 @@
 }
 
 .table {
+  width: 100%;
   margin: 0 auto;
+  border: 1px solid red;
 }
 
 .form {
+  width: 100%;
   margin: 0 auto;
   padding: 1.25rem;
 }
