--- a/components/Tables/Table.module.css
+++ b/components/Tables/Table.module.css
@@ -1,19 +1,21 @@
 .table {
+  table-layout: fixed;
   width: 100%;
 }
 
 .thead {
-  display: flex;
   width: 100%;
-  margin: 0 auto;
 }
 
 .thead_tr {
-  background-color: black;
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 2fr) repeat(2, 1fr);
+  background-color: black;
 }
 
 .thead_th, .tbody_td {
+  width: 100%;
   padding: 0.5rem 4rem;
 }
 
@@ -23,29 +25,34 @@
 
 .tbody {
   width: 100%;
-  display: flex;
-  margin: 0 auto;
-  background-color: #EDF2F7;
+  /* background-color: #edf2f7; */
 }
 
-.table_tr {
+.tbody_tr {
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 2fr) repeat(2, 1fr);
+  align-items: center;
   background-color: #F9FAFB;
-  text-align: center;
 }
 
 .td_img {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   padding: 0.5rem 4rem;
 }
 
 .td_span {
-  text-align: center;
+text-align: center;
   margin-left: 0.5rem;
   font-weight: 600;
 }
 
 .td_but {
   cursor: pointer;
+  background-color: #F9FAFB;
 }
 
 .td_but_span {
@@ -53,4 +60,8 @@
   color: white;
   padding: 0.25rem 0.625rem;
   border-radius: 0.375rem;
+}
+
+.tbody_but {
+  display: flex;
 }
