--- a/components/Form/Form.module.css
+++ b/components/Form/Form.module.css
@@ -1,71 +1,5 @@
 .form {
-  display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    width: 66.67%;
-    gap: 1rem;
-}
-
-.container_input {
   width: 100%;
-  margin: 1rem 0;
-  padding: 0.75rem 1.25rem;
-  outline: none;
-  border: 1px solid;
-  border-radius: 0.375rem;
-}
-
-.container_input_date {
-  border: 1px solid;
-  padding: 0.75rem 1.25rem;
-}
-
-.container_input_date:focus {
-  outline: none;
-  border-radius: 0.375rem;
-}
-
-
-.form_option {
-  display: flex;
-    gap: 2.5rem;
-    align-items: center;
-}
-
-.form_check_input {
-  appearance: none;
-  border-radius: 9999px;
-  height: 1rem;
-  width: 1rem;
-  border: 1px solid #D1D5DB;
-  background-color: #FFFFFF;
-}
-
-.form_check_input:checked {
-  background-color: #10B981;
-  border-color: #10B981;
-}
-
-.form_check_input:focus {
-  outline: none;
-}
-.form_check_label {
-  display: inline-block;
-  color: #4B5563;
-}
-
-.form_but {
-  display: flex;
-    justify-content: center;
-    font-size: 1rem;
-    width: 33.33%;
-    background-color: #34D399;
-    color: #FFFFFF;
-    padding: 0.5rem 1rem;
-    border-radius: 0.375rem;
-}
-
-.form_but:hover {
-background-color: #F9FAFB;
-  border-color: #10B981;
-  color: #10B981;
+  margin: 0 auto;
+  padding: 1.25rem;
 }
